# social-network

./: .gitignore
backend/: docker-compose.yml
backend/data/: dynamic_conf.yml
backend/data/traefik.yml/: traefik.yml
backend/services/auth-service/: .env  Cargo.toml  Dockerfile  users.sql
backend/services/auth-service/core/: config.rs
backend/services/auth-service/queries/: mod.rs
backend/services/auth-service/src/: lib.rs  main.rs
backend/services/auth-service/src/api/: mod.rs  routes.rs
backend/services/auth-service/src/api/handlers/: login.rs  logout.rs  mod.rs  refresh.rs  register.rs
backend/services/auth-service/src/core/: app_state.rs  config.rs  mod.rs
backend/services/auth-service/src/database/: mod.rs
backend/services/auth-service/src/infrastructure/: db.rs
backend/services/auth-service/src/models/: errors.rs  login.rs  mod.rs  user.rs
backend/services/auth-service/src/services/: auth_service.rs  blacklist_service.rs  mod.rs  register_service.rs
backend/services/recommendation-service/: Dockerfile  requirements.txt
