[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
jsonwebtoken = "8.2"
base64 = "0.22.1"
dotenvy = "0.15"
redis = "0.32"
